Closed
Bug 44327
Opened 26 years ago
Closed 25 years ago
Opening a new window crashes webclient.
Categories
(Core Graveyard :: Java APIs to WebShell, defect, P3)
Core Graveyard
Java APIs to WebShell
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: edburns, Assigned: ashuk)
References
Details
(Keywords: crash, Whiteboard: suntrak-n6)
Attachments
(5 files)
Opening a new window crashes webclient.
Checked in fix just now.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Comment 3•25 years ago
|
||
On latest Webclient(23/08/2000) and Mozilla M16 opening new window causes crash
under Solaris and hangup under Win32.
Please see attached dump for more info.
How to reproduce:
1.run Webclient with some url
2.Select File->New Window
Actual Result:
under Solaris: webclient dumped core
uder WinNT: webclient hangups
Expected result:
New window opened and nothing more.
Reproducible:
under Solaris - always
under Win32 - in ~80% hangup
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 4•25 years ago
|
||
| Assignee | ||
Comment 6•25 years ago
|
||
| Assignee | ||
Comment 8•25 years ago
|
||
| Reporter | ||
Comment 10•25 years ago
|
||
Hi Ashu,
I tried this on my machine, and it froze webclient, and brought the machine to
its knees.
I can't yet give it approval. Let's meet tomorrow and think about how we can
solve this without the busy waiting.
| Assignee | ||
Comment 11•25 years ago
|
||
| Reporter | ||
Comment 12•25 years ago
|
||
| Reporter | ||
Comment 13•25 years ago
|
||
Hi Ashu,
I tried this http://bugzilla.mozilla.org/showattachment.cgi?attach_id=23479
attachment with today's build on my WINNT machine and it worked.
I can now give r=edburns.
Please check in that attachment, and before doing so, carefully diff to make
sure you're not wiping any other changes made to the tree.
| Assignee | ||
Comment 14•25 years ago
|
||
Diffed changes and checked Fix into the tree (tag JAVADEV_RTM_20001102)
_Ashu
| Assignee | ||
Comment 15•25 years ago
|
||
Closing Bug. Fix has been checked in.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago → 25 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•