mozilla/java/webclient/classes_spec/org/mozilla/webclient/wrapper_native/NativeEventThread.java
@@ -46,6 +46,13 @@ public class NativeEventThread extends Thread
 {
 
 //
+// Class variables
+//
+
+private static Object firstThread = null;
+
+
+//
 // Attribute ivars
 //
 
@@ -110,6 +117,10 @@ public NativeEventThread(String threadName, BrowserControl yourBrowserControl)
 {
     super(threadName);
     ParameterCheck.nonNull(yourBrowserControl);
+
+    if (null == firstThread) {
+        firstThread = this;
+    }
 
     browserControl = yourBrowserControl;
 
@@ -229,7 +240,9 @@ public void run()
                 return;
             }
 
-            nativeProcessEvents(nativeWebShell);
+            if (this == firstThread) {
+                nativeProcessEvents(nativeWebShell);
+            }
             
             if (null != listenersToAdd && !listenersToAdd.isEmpty()) {
                 tempEnum = listenersToAdd.elements();
